manifests/kctl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kctlapp-deployment
  namespace: jupyterapp
  labels:
    app: kctlapp

spec:
  replicas: 3

  selector:
    matchLabels:
      app: kctlapp

  template:
    metadata:
      name: kctlapp
      labels:
        app: kctlapp
    spec:
      serviceAccountName: jupyterapp-serviceaccount-create
      volumes:
        - name: at-vol
          persistentVolumeClaim:
            claimName: jupyter-pvc
      containers:
        - image: intel01:5000/kctlapp-multiarch:latest
          name: kctlapp
          resources:
            requests:
              memory: 50M
              cpu: 100m
            limits:
              memory: 350M
              cpu: 200m
          volumeMounts:
            - name: at-vol
              mountPath: /var/nfs
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "if ! [ -d /var/nfs/inuse ]; then mkdir /var/nfs/inuse; fi" ]
            #preStop:
            #  exec:
            #    command: [ "kubectl", "delete", "-f", "/var/nfs/inuse" ]
      nodeSelector:
        arch: x86

---
apiVersion: v1
kind: Service
metadata:
  name: kctlapp-service
  namespace: jupyterapp
  labels:
    app: kctlapp
spec:
  selector:
    app: kctlapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kctlapp-ingress
  namespace: jupyterapp
  labels:
    app: kctlapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    #nginx.ingress.kubernetes.io/limit-connections: "2"
    nginx.ingress.kubernetes.io/limit-rps: "1"
    #nginx.ingress.kubernetes.io/limit-rpm: "1"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"

spec:
  tls:
    - hosts:
        - 192-168-1-105.sslip.io
  rules:
  - host: 192-168-1-105.sslip.io
    http:
      paths:
      - backend:
          service:
            name: kctlapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
